src/gen/ANTLR/PythonParser.java
// Generated from src/ANTLR/PythonParser.g4 by ANTLR 4.13.2
package gen.ANTLR;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EXPR_START=1, EXPR_END=2, STMT_START=3, STMT_END=4, COMMENT_START=5, COMMENT_END=6, 
		IMPORT=7, FROM=8, TRUE=9, FALSE=10, NONE=11, IF=12, ELIF=13, ELSE=14, 
		FOR=15, WHILE=16, DEF=17, RETURN=18, PRINT=19, CLASS=20, SELF=21, BREAK=22, 
		CONTINUE=23, PASS=24, TRY=25, EXCEPT=26, FINALLY=27, S_AND=28, S_OR=29, 
		NOT=30, IN=31, IS=32, AS=33, SET=34, PIPE=35, GLOBAL=36, INCLUDE=37, EXTENDS=38, 
		ENDIF=39, ENDFOR=40, IGNORE=41, MISSING=42, WITH=43, ENDWITH=44, WITHOUT=45, 
		CONTEXT=46, BLOCK=47, ENDBLOCK=48, PLUS=49, MINUS=50, MULTIPLY=51, SLASH=52, 
		MOD=53, LT=54, GT=55, LTE=56, GTE=57, EQUAL=58, NEQ=59, STRICT_EQ=60, 
		STRICT_NEQ=61, ASSIGN=62, AND=63, OR=64, LPAREN=65, RPAREN=66, LBRACK=67, 
		RBRACK=68, LCBRACK=69, RCBRACK=70, COLON=71, SEMI=72, COMMA=73, DOT=74, 
		HASHTAG_VALUE=75, HASHTAG=76, AT=77, BANG=78, AMPERSAND=79, DOLLAR=80, 
		HTML_DOCTYPE=81, CSS_COM_S=82, CSS_COM_E=83, STYLE=84, TYPE=85, NUMBER=86, 
		STRING=87, IDENTIFIER=88, NEWLINE=89, WS=90, COMMENT=91, COMMENT_CONTENT=92, 
		COMMENT_HASH=93;
	public static final int
		RULE_program = 0, RULE_statementBlock = 1, RULE_statement = 2, RULE_simpleStatement = 3, 
		RULE_passStatement = 4, RULE_compoundStatement = 5, RULE_assignment = 6, 
		RULE_value = 7, RULE_list = 8, RULE_listComprehension = 9, RULE_tuple = 10, 
		RULE_elements = 11, RULE_json = 12, RULE_jsonData = 13, RULE_expressions = 14, 
		RULE_comparisonExpressions = 15, RULE_mathematicalExpressions = 16, RULE_logicalExpressions = 17, 
		RULE_valuesExp = 18, RULE_atom = 19, RULE_primaryAtom = 20, RULE_postfix = 21, 
		RULE_globalStatement = 22, RULE_pythonImport = 23, RULE_importSyntax = 24, 
		RULE_fromImport = 25, RULE_importedNames = 26, RULE_importsAliases = 27, 
		RULE_printStatement = 28, RULE_printArgs = 29, RULE_block = 30, RULE_ifStatement = 31, 
		RULE_ifBlock = 32, RULE_elifBlock = 33, RULE_elseBlock = 34, RULE_forLoop = 35, 
		RULE_whileLoop = 36, RULE_function = 37, RULE_parameters = 38, RULE_parameter = 39, 
		RULE_returnStatement = 40, RULE_functionCall = 41, RULE_argument = 42, 
		RULE_decorator_rule = 43, RULE_classDef = 44, RULE_baseClass = 45, RULE_jinjaBody = 46, 
		RULE_jinjaExpression = 47, RULE_jinjaFilter = 48, RULE_jinjaComment = 49, 
		RULE_commentBody = 50, RULE_jinjaStatement = 51, RULE_jinjaStatementContent = 52, 
		RULE_jinjaIfStatements = 53, RULE_jinjaIf = 54, RULE_jinjaElif = 55, RULE_jinjaElse = 56, 
		RULE_jinjaFor = 57, RULE_jinjaSet = 58, RULE_jiniaExtends = 59, RULE_jinjaInclude = 60, 
		RULE_jinjaBlock = 61, RULE_jinjaLocalVariable = 62, RULE_templateBody = 63, 
		RULE_html = 64, RULE_htmlElement = 65, RULE_htmlDoctype = 66, RULE_htmlTag = 67, 
		RULE_styleTag = 68, RULE_genericHtml = 69, RULE_selfClosingTag = 70, RULE_htmlAttributes = 71, 
		RULE_attributeName = 72, RULE_attributeValue = 73, RULE_htmlBody = 74, 
		RULE_htmlText = 75, RULE_css = 76, RULE_cssSelector = 77, RULE_cssKeyValue = 78, 
		RULE_cssKey = 79, RULE_cssValue = 80, RULE_cssComment = 81;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statementBlock", "statement", "simpleStatement", "passStatement", 
			"compoundStatement", "assignment", "value", "list", "listComprehension", 
			"tuple", "elements", "json", "jsonData", "expressions", "comparisonExpressions", 
			"mathematicalExpressions", "logicalExpressions", "valuesExp", "atom", 
			"primaryAtom", "postfix", "globalStatement", "pythonImport", "importSyntax", 
			"fromImport", "importedNames", "importsAliases", "printStatement", "printArgs", 
			"block", "ifStatement", "ifBlock", "elifBlock", "elseBlock", "forLoop", 
			"whileLoop", "function", "parameters", "parameter", "returnStatement", 
			"functionCall", "argument", "decorator_rule", "classDef", "baseClass", 
			"jinjaBody", "jinjaExpression", "jinjaFilter", "jinjaComment", "commentBody", 
			"jinjaStatement", "jinjaStatementContent", "jinjaIfStatements", "jinjaIf", 
			"jinjaElif", "jinjaElse", "jinjaFor", "jinjaSet", "jiniaExtends", "jinjaInclude", 
			"jinjaBlock", "jinjaLocalVariable", "templateBody", "html", "htmlElement", 
			"htmlDoctype", "htmlTag", "styleTag", "genericHtml", "selfClosingTag", 
			"htmlAttributes", "attributeName", "attributeValue", "htmlBody", "htmlText", 
			"css", "cssSelector", "cssKeyValue", "cssKey", "cssValue", "cssComment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{{'", "'}}'", "'{%'", "'%}'", "'{#'", "'#}'", "'import'", "'from'", 
			"'True'", "'False'", "'None'", "'if'", "'elif'", "'else'", "'for'", "'while'", 
			"'def'", "'return'", "'print'", "'class'", "'self'", "'break'", "'continue'", 
			"'pass'", "'try'", "'except'", "'finally'", "'and'", "'or'", "'not'", 
			"'in'", "'is'", "'as'", "'set'", "'|'", "'global'", "'include'", "'extends'", 
			"'endif'", "'endfor'", "'ignore'", "'missing'", "'with'", "'endwith'", 
			"'without'", "'context'", "'block'", "'endblock'", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'==='", 
			"'!=='", "'='", "'&&'", "'||'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"':'", "';'", "','", "'.'", null, "'#'", "'@'", "'!'", "'&'", "'$'", 
			null, "'/*'", "'*/'", "'style'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "EXPR_START", "EXPR_END", "STMT_START", "STMT_END", "COMMENT_START", 
			"COMMENT_END", "IMPORT", "FROM", "TRUE", "FALSE", "NONE", "IF", "ELIF", 
			"ELSE", "FOR", "WHILE", "DEF", "RETURN", "PRINT", "CLASS", "SELF", "BREAK", 
			"CONTINUE", "PASS", "TRY", "EXCEPT", "FINALLY", "S_AND", "S_OR", "NOT", 
			"IN", "IS", "AS", "SET", "PIPE", "GLOBAL", "INCLUDE", "EXTENDS", "ENDIF", 
			"ENDFOR", "IGNORE", "MISSING", "WITH", "ENDWITH", "WITHOUT", "CONTEXT", 
			"BLOCK", "ENDBLOCK", "PLUS", "MINUS", "MULTIPLY", "SLASH", "MOD", "LT", 
			"GT", "LTE", "GTE", "EQUAL", "NEQ", "STRICT_EQ", "STRICT_NEQ", "ASSIGN", 
			"AND", "OR", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LCBRACK", "RCBRACK", 
			"COLON", "SEMI", "COMMA", "DOT", "HASHTAG_VALUE", "HASHTAG", "AT", "BANG", 
			"AMPERSAND", "DOLLAR", "HTML_DOCTYPE", "CSS_COM_S", "CSS_COM_E", "STYLE", 
			"TYPE", "NUMBER", "STRING", "IDENTIFIER", "NEWLINE", "WS", "COMMENT", 
			"COMMENT_CONTENT", "COMMENT_HASH"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PythonParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public StatementBlockContext statementBlock() {
			return getRuleContext(StatementBlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PythonParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(PythonParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PythonParser.NEWLINE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			statementBlock();
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(165);
				match(NEWLINE);
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(171);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementBlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(PythonParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PythonParser.NEWLINE, i);
		}
		public StatementBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterStatementBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitStatementBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitStatementBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementBlockContext statementBlock() throws RecognitionException {
		StatementBlockContext _localctx = new StatementBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statementBlock);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			statement();
			setState(182);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(175); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(174);
						match(NEWLINE);
						}
						}
						setState(177); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NEWLINE );
					setState(179);
					statement();
					}
					} 
				}
				setState(184);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssStmtContext extends StatementContext {
		public CssContext css() {
			return getRuleContext(CssContext.class,0);
		}
		public CssStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterCssStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitCssStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitCssStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlStmtContext extends StatementContext {
		public HtmlContext html() {
			return getRuleContext(HtmlContext.class,0);
		}
		public HtmlStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterHtmlStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitHtmlStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitHtmlStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompoundStmtContext extends StatementContext {
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public CompoundStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterCompoundStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitCompoundStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitCompoundStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleSeqStmtContext extends StatementContext {
		public List<SimpleStatementContext> simpleStatement() {
			return getRuleContexts(SimpleStatementContext.class);
		}
		public SimpleStatementContext simpleStatement(int i) {
			return getRuleContext(SimpleStatementContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(PythonParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(PythonParser.SEMI, i);
		}
		public SimpleSeqStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSimpleSeqStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSimpleSeqStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitSimpleSeqStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaStmtContext extends StatementContext {
		public JinjaBodyContext jinjaBody() {
			return getRuleContext(JinjaBodyContext.class,0);
		}
		public JinjaStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterJinjaStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitJinjaStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitJinjaStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			int _alt;
			setState(197);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new SimpleSeqStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(185);
				simpleStatement();
				setState(190);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(186);
						match(SEMI);
						setState(187);
						simpleStatement();
						}
						} 
					}
					setState(192);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				}
				break;
			case 2:
				_localctx = new CompoundStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(193);
				compoundStatement();
				}
				break;
			case 3:
				_localctx = new CssStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(194);
				css();
				}
				break;
			case 4:
				_localctx = new HtmlStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(195);
				html();
				}
				break;
			case 5:
				_localctx = new JinjaStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(196);
				jinjaBody();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
